fix page from not overflowing in x direction

--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,7 @@
     background-color: #ffffff;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 body{
     margin: 0;
